# platform.core.multimedia.libmm-evas-renderer

./: AUTHORS  Makefile.am  configure.ac  mm-evas-renderer.pc.in
packaging/: libmm-evas-renderer.spec
src/: Makefile.am  mm_evas_renderer.c
src/include/: mm_evas_renderer.h
